# momentum-trader

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  crontab  pyproject.toml
outputs/: backtest_report.md  trailing_sma_sweep.md  v03_report.md  v03_trade_log.csv  v1_report.md  v1_top_trades.md  v1_trade_log.csv  walkforward_10_15.md  walkforward_variants.md
scripts/: run_backtest.py  run_scaling_sweep.py  run_trading.py  run_trailing_sma_sweep.py  run_v03.py  run_v1.py  run_walkforward_variants.py  run_wf_10_15.py
src/trader/: config.py  db.py  monitor.py  notifications.py  runner.py
src/trader/backtest/: engine.py  metrics.py  walk_forward.py
src/trader/execution/: alpaca_broker.py  broker.py  order_manager.py
src/trader/reports/: equity_curve.py
src/trader/risk/: exits.py  filters.py  kill_switches.py  sizing.py
src/trader/signals/: base.py  mean_reversion.py  momentum.py
tests/: test_exits.py  test_intraday_monitor.py  test_kill_switches.py  test_order_manager.py  test_signals.py  test_sizing.py
